# mattermost-api-rust-driver

./: Cargo.toml
src/: main.rs
src/api/: auth.rs  mod.rs  users.rs
